welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: ';' expected but 'else' found.
    }else
     ^ZigZag:35: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:38: error: expected start of definition
	override def forward()  {
                 ^ZigZag:41: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:44: error: expected start of definition
	override def backward() {
                 ^ZigZag:47: error: Unmatched closing brace '}' ignored here
}
^